<resources>
    <string name="app_name">Camarada</string>
    <string name="permissionsDeniedMessage">Videona needs some permissions to use the camera or
        record audio.\nWithout them Videona can\'t continue and will be closed.</string>
    <string name="CloseBecauseOfPermissionsTitle">Permissions not granted</string>
    <string name="chronometerDefault">00:00</string>
    <string name="toast_exit">Press back to exit</string>
    <string name="please_wait">Please wait</string>
    <string name="dialog_processing">Making magic on your video</string>
    <string name="recordError">Something bad happened. Impossible to record video, try again</string>
    <string name="shareError">Ups, we couldn\'t share this video. Sorry</string>
    <string name="share_using">"Share video using "</string>
    <string name="editDeleteProjectTitle">Delete videos from project</string>
    <string name="editDeleteProjectMessage">Want to delete the clips of this edition?</string>
    <string name="editDeleteProjectAccept">Delete</string>
    <string name="editDeleteProjectCancel">Don’t Delete</string>
    <string name="edit_title_name">Edit Room</string>
    <string name="edit_text_fx">Working on effects</string>
    <string name="edit_text_look">Working on magic</string>
    <string name="edit_text_special">Special features</string>
    <string name="edit_text_insufficient_memory">Not enough memory</string>
    <string name="toast_add_videos">Please, add videos to project</string>
    <string name="toast_exit_edit">Press back again to exit the edit room</string>
    <string name="addMediaItemToTrackError">Oops! Something bad happened. Try to add again</string>
    <string name="confirmDeleteVideosFromProjectTitle">Delete videos from project</string>
    <string name="confirmDeleteVideosFromProjectMessage">¿Do you want to delete this elements?</string>
    <string name="acceptDeleteVideosFromProject">Yes, clear them</string>
    <string name="cancelDeleteVideosFromProject">I want them</string>
    <string name="deletedVideosFromProject">Deleted videos from project. Record or add new videos</string>
    <string name="addVideosToProject">Please, record or add new videos</string>
    <string name="invalidRazorTime">Please, select an instant time to razor this video</string>
    <string name="add_videos_to_project">Please, add videos to project</string>
    <string name="videos_removed">Clear videos from project, record or add new videos</string>
    <string name="error">error</string>
    <string name="editTextActionLabel">Done</string>
    <string name="galleryDeleteTitle">Delete </string>
    <string name="galleryDeleteMessage">Definitely remove these files from your terminal</string>
    <string name="galleryDeleteAccept">Remove</string>
    <string name="galleryDeleteCancel">Don’t Remove</string>
    <string name="confirmDeleteTitle">Delete</string>
    <string name="confirmDeleteTitle1">video</string>
    <string name="confirmDeleteTitle2">videos</string>
    <string name="cancelDeleteMessage">I want them</string>
    <string name="galleryActivityTitle">Gallery</string>
    <string name="mastersFolderTitle">Raw</string>
    <string name="editedFolderTitle">Edited</string>
    <string name="confirmTrim">Done</string>
    <string name="invalid_video">This video is not valid. Please, select another one</string>
    <string name="title_activity_video_player">Video Player</string>
    <string name="action_settings">Settings</string>
    <string name="rateUsDialogTitle">¿Do you want to rate us?</string>
    <string name="rateUsDialogMessage">If you like Videona give us five stars. If you have any suggestion or doubt write us</string>
    <string name="acceptDialogRateUs">Love it</string>
    <string name="cancelDialogRateUs">Hate it</string>
    <string name="error_rate_app">Could not launch Google Play</string>
    <string name="title_vote_section">Vote</string>
    <string name="content_vote_section">Vote our app</string>
    <string name="exitAppTitle">Shut down</string>
    <string name="exitAppMessage">Do you want to close the application?</string>
    <string name="exitAppAccept">Done</string>
    <string name="exitAppCancel">Me quedo</string>
    <string name="title_advanced_section">Advanced</string>
    <string name="content_advanced_section">Join Videona Beta</string>
    <string name="thanks">Thanks!!!</string>
    <string name="joinBetaLinkInfo">Please click the link bellow to get the beta version</string>
    <string name="joinBetaLink"><u>Click here!!!</u></string>
    <string name="email">email</string>
    <string name="enterEmail">Enter a valid email</string>
    <string name="removeEmail">Remove email</string>
    <string name="send_email">Send</string>
    <string name="invalid_email">Please, insert a valid email</string>
    <string name="valid_email">Thanks!!</string>
    <string name="positive_button_join_beta_dialog">Yes</string>
    <string name="negative_button_join_beta_dialog">Not now, thanks</string>
    <string name="settingsTitle">Settings</string>
    <string name="titleUserSection">My account</string>
    <string name="name">Name</string>
    <string name="enterName">Enter your name</string>
    <string name="removeName">Remove name</string>
    <string name="username">Username</string>
    <string name="enterUsername">Enter a username</string>
    <string name="removeUsername">Remove username</string>
    <string name="emailPreference">Email</string>
    <string name="save">Save</string>
    <string name="title_camera_section">Camera</string>
    <string name="resolution">Resolution</string>
    <string name="low_resolution_name">Good (720p)</string>
    <string name="low_resolution_value">Good</string>
    <string name="good_resolution_name">Very good (1080p)</string>
    <string name="good_resolution_value">Very good</string>
    <string name="high_resolution_name">Excellent (4K)</string>
    <string name="high_resolution_value">Excellent</string>
    <string name="quality">Quality</string>
    <string name="low_quality_name">Good (2 Mbps)</string>
    <string name="low_quality_value">Good</string>
    <string name="good_quality_name">Very good (5 Mbps)</string>
    <string name="good_quality_value">Very good</string>
    <string name="high_quality_name">Excellent (10 Mbps)</string>
    <string name="high_quality_value">Excellent</string>
    <string name="cancelSettingsCamera">Cancel</string>
    <string name="aboutUsTitle">About us</string>
    <string name="moreInformation">More information</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="termsOfService">Terms of service</string>
    <string name="licenses">Licenses</string>
    <string name="legacyAdviceTitle">Legal Notice</string>
    <string name="title_contact_section">Contact</string>
    <string name="content_contact_section">Give us feedback</string>
    <string name="title_tutorial_section">Tutorial</string>
    <string name="content_tutorial_section">See our tutorial</string>
    <string name="accountActions">Account actions</string>
    <string name="exit">Exit</string>
    <string name="aboutUsContent">
        Record, edit, share…Three simple things you will like to do as soon as you have the new
        Videona App in your smartphone. From now you can enjoy the perfect tool to create videos
        with super cool effects and filters, add music and share your creations with your favorites
        socials networks. \n\n

        Before Videona, there are a group of spanish young enterpreneurs with the will of building
        the best smartphone video editor application. Our application want to break the edition
        barrier and be a change in the audiovisual world and smartphones. \n\n

        Copyright 2015. Videona Socialmedia S.L. Todos los derechos reservados. \n
    </string>
    <string name="videona_web">http://www.videona.com</string>
    <string name="contactUsTitle"><u>Contact us</u></string>
    <string name="contactUsContent">Visit our web page:</string>
    <string name="videonaWeb">http://www.videona.com\n</string>
    <string name="versionTitle"><u>Version</u></string>
    <string name="videona">Videona</string>
    <string name="versionContent">beta </string>
    <string name="madeIn">Made in Madrid</string>
    <string name="licenseTitle"><u>Free software licenses</u></string>
</resources>