<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/title_advanced_section"
        >
        <Preference
            android:key="beta"
            android:title="@string/downloadVideonaPreferenceText">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/moreInformation">
        <Preference
            android:title="@string/aboutUsTitle">
            <intent android:action="com.videonasocialmedia.camarada.presentation.views.activity.AboutActivity"/>
        </Preference>
        <Preference
            android:title="@string/privacyPolicy">
            <intent android:action="com.videonasocialmedia.camarada.presentation.views.activity.PrivacyPolicyActivity"/>
        </Preference>
        <Preference
            android:title="@string/termsOfService">
            <intent android:action="com.videonasocialmedia.camarada.presentation.views.activity.TermsOfServiceActivity"/>
        </Preference>
        <Preference
            android:title="@string/licenses">
            <intent android:action="com.videonasocialmedia.camarada.presentation.views.activity.LicensesActivity"/>
        </Preference>
        <Preference
            android:title="@string/legacyAdviceTitle">
            <intent android:action="com.videonasocialmedia.camarada.presentation.views.activity.LegalNoticeActivity"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/accountActions">
        <Preference
            android:key="exit"
            android:title="@string/exit">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>